# hubris

./: Cargo.toml
app/demo-pinetime/: Cargo.toml  app.toml  openocd.cfg  openocd.gdb
app/demo-pinetime/src/: main.rs
chips/: nRF52832.toml
drv/nrf52832-gpio/: Cargo.toml  build.rs
drv/nrf52832-gpio-api/: Cargo.toml  build.rs
drv/nrf52832-gpio-api/src/: lib.rs
drv/nrf52832-gpio-common/: Cargo.toml
drv/nrf52832-gpio-common/src/: lib.rs  server.rs
drv/nrf52832-gpio/src/: main.rs
drv/nrf52832-spi/: Cargo.toml
drv/nrf52832-spi-server/: Cargo.toml  build.rs
drv/nrf52832-spi-server/src/: main.rs
drv/nrf52832-spi/src/: lib.rs
idl/: nrf52832-gpio.idol
task/pinetime-lcd/: Cargo.toml
task/pinetime-lcd/src/: main.rs
