[package]
name = "drv-nrf52832-gpio-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
userlib = {path = "../../sys/userlib"}
num-traits = {version = "0.2", default-features = false}
zerocopy = "0.6.1"
