[package]
name = "drv-nrf52832-gpio"
version = "0.1.0"
edition = "2021"

[dependencies]
userlib = {path = "../../sys/userlib"}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
nrf52832-pac = { version = "0.11.0", default-features = false }
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
drv-nrf52832-gpio-api = {path = "../nrf52832-gpio-api"}
drv-nrf52832-gpio-common = {path = "../nrf52832-gpio-common"}
cfg-if = "1"

[build-dependencies]
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "drv-nrf52832-gpio"
test = false
bench = false
