[package]
name = "task-pinetime-lcd"
version = "0.1.0"
edition = "2018"

[features]
panic-messages = ["userlib/panic-messages"]

[dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}
userlib = {path = "../../sys/userlib"}
drv-nrf52832-gpio-api = {path = "../../drv/nrf52832-gpio-api"}
drv-spi-api = {path = "../../drv/spi-api"}
#drv-nrf52832-spi = {path = "../../drv/nrf52832-spi"}
#nrf52832-pac = { version = "0.11.0", default-features = false }
micromath = { version = "2.0.0" }

[[bin]]
name = "task-pinetime-lcd"
test = false
bench = false
